// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeController > matches snapshot for dark theme > DarkTheme 1`] = `
<div>
  <button
    aria-label="Switch theme to system mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-content w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > matches snapshot for light theme > LightTheme 1`] = `
<div>
  <button
    aria-label="Switch theme to dark mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-content w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > matches snapshot for system theme > SystemTheme 1`] = `
<div>
  <button
    aria-label="Switch theme to light mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-info w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 320 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders different icons for each theme > DarkThemeIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to system mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-content w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders different icons for each theme > LightThemeIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to dark mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-content w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders different icons for each theme > SystemThemeIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to light mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-info w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 320 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders the correct system icon based on device type > DesktopIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to light mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-info w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 576 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M528 0H48C21.5 0 0 21.5 0 48v320c0 26.5 21.5 48 48 48h192l-16 48h-72c-13.3 0-24 10.7-24 24s10.7 24 24 24h272c13.3 0 24-10.7 24-24s-10.7-24-24-24h-72l-16-48h192c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zm-16 352H64V64h448v288z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders the correct system icon based on device type > MobileIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to light mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-info w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 320 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`ThemeController > renders the correct system icon based on device type > TabletIcon 1`] = `
<div>
  <button
    aria-label="Switch theme to light mode"
    class="flex items-center justify-center p-2 rounded-full hover:bg-base-200 "
  >
    <div
      class="flex items-center justify-center space-x-1"
    >
      <svg
        aria-hidden="true"
        class="text-info w-5 h-5 transition-transform "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM224 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm176-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h328c6.6 0 12 5.4 12 12v312z"
        />
      </svg>
    </div>
  </button>
</div>
`;
